--- a/works.html
+++ b/works.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recent works & Contributions</title>
-    
+
     <!-- stylesheets -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css">
@@ -22,8 +22,12 @@
 
 </head>
 
-<body>
-    <div class="container workContainer h-min">
+<body data-barba="wrapper">
+    <div class="load-container">
+        <div class="loading-screen"></div>
+    </div>
+
+    <div class="container h-min">
         <!-- navbar goes here -->
         <nav>
             <div class="max-w-7xl mx-auto px-8">
@@ -32,7 +36,7 @@
                     <div class="md:flex items-center space-x-4">
                         <!-- logo -->
                         <div>
-                            <a href="index" class="flex items-center py-8 lg:py-5 px-2">
+                            <a href="https://milindgoel15.github.io" class="flex items-center py-8 lg:py-5 px-2">
                                 <!--             any logo -->
                                 <span
                                     class="font-bold text-white text-2xl hover:text-blue-600 transition duration-300">Milind
@@ -50,8 +54,7 @@
                         <a href="contact"
                             class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Contact</a>
                         <a href="CV.pdf"
-                            class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300"
-                            target="_blank">Resume</a>
+                            class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300" target="_blank">Resume</a>
                     </div>
 
                     <!-- mobile button goes here -->
@@ -71,7 +74,7 @@
             <!-- mobile menu -->
             <div class="mobile-menu hidden md:hidden">
 
-                <a href="index" class="block py-2 px-10 text-lg text-white">Home</a>
+                <a href="https://milindgoel15.github.io" class="block py-2 px-10 text-lg text-white">Home</a>
                 <a href="works" class="block py-2 px-10 text-lg text-white">Works</a>
                 <a href="skills" class="block py-2 px-10 text-lg text-white">Skills</a>
                 <a href="contact" class="block py-2 px-10 text-lg text-white">Contact</a>
@@ -80,7 +83,7 @@
         </nav>
 
         <!-- content goes here -->
-        <div class="py-32 text-center">
+        <div class="py-32 text-center animate-this" data-barba="container" data-barba-namespace="works">
             <h2 class="font-extrabold text-2xl py-5 text-white md:text-4xl">Recents Works & Contributions</h2>
 
             <div class="flex justify-center min-h-screen">
@@ -89,7 +92,7 @@
                     <a href="http://abhishekgoelandassociates.com" target="blank">
 
                         <div
-                            class="worksGrid p-8 bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem]">
+                            class="p-8 bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Abhishek Goel & Associates</h2>
                             <p class="text-lg text-slate-200">Website for Chartered Accountant firm</p>
@@ -101,7 +104,7 @@
                     <a href="https://github.com/RetroMusicPlayer" target="blank">
 
                         <div
-                            class="worksGrid p-8 bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem]">
+                            class="p-8 bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Retro Music Player</h2>
                             <p class="text-lg text-slate-200">Member and contributor of Retro Music Player, a material
@@ -112,7 +115,7 @@
 
                     <a href="http://mwsretail.in" target="blank">
                         <div
-                            class="worksGrid p-8 bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem]">
+                            class="p-8 bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Milind Webcomm Services</h2>
                             <p class="text-lg text-slate-200">Website for Web Designing and E-Commerce operators</p>
@@ -127,7 +130,7 @@
                     <a href="https://github.com/milindgoel15/milindgoel15.github.io" target="blank">
 
                         <div
-                            class="worksGrid p-8 bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem]">
+                            class="p-8 bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Personal Portfolio</h2>
                             <p class="text-lg text-slate-200">Designed personal Portfolio website for myself</p>
@@ -142,10 +145,12 @@
             </div>
 
             <a href="https://github.com/milindgoel15?tab=repositories">
-                <button class="py-6 my-20 px-7 text-xl md:py-5 md:px-7 md:my-8 xl:my-20 xl:px-10 xl:py-7 text-xl rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700">Other Contributions</button>
+                <button
+                    class="py-6 my-20 px-7 text-xl md:py-5 md:px-7 md:my-8 xl:my-20 xl:px-10 xl:py-7 text-xl rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700">Other
+                    Contributions</button>
             </a>
 
-            <p class="text-slate-300 footer mt-12">Made with <span class="text-blue-600">❤</span> by <span
+            <p class="text-slate-300 footer mt-12">Made with <span class="text-red-600">❤</span> by <span
                     class="text-blue-600">Milind Goel</span> </p>
 
         </div>
@@ -155,7 +160,11 @@
     <script src="snowflakes.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
     <script src="kursor.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://unpkg.com/@barba/core"></script>
+    <!-- load gsap animation library (minified version) -->
+    <script src="https://unpkg.com/gsap@latest/dist/gsap.min.js"></script>
+    <script src="barba.js"></script>
 </body>
 
 </html>
