fix padding issues

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <div class="loading-screen"></div>
     </div>
 
-    <div class="container h-min">
+    <div class="container h-min sm:ml-8 md:ml-0">
         <nav>
             <div class="max-w-7xl mx-auto px-8">
                 <div class="flex justify-between h-24">
