--- a/skills.html
+++ b/skills.html
@@ -27,7 +27,7 @@
         <div class="loading-screen"></div>
     </div>
 
-    <div class="container h-min">
+    <div class="container h-min sm:ml-8 md:ml-0">
         <!-- navbar goes here -->
         <nav>
             <div class="max-w-7xl mx-auto px-8">
@@ -90,8 +90,7 @@
 
                 <div class="grid grid-rows-5 gap-2 lg:grid-col-3 lg:grid-rows-2 lg:grid-flow-col lg:gap-5 lg:ml-20">
 
-                    <div
-                        class="p-8 space-y-2 mt-12 w-96 h-56 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)]">
+                    <div class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)]">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Web Designing</h2>
                         <p class="text-lg text-slate-200">Prototyping & UI/UX Designing</p>
@@ -103,7 +102,7 @@
 
 
                     <div
-                        class="p-8 space-y-2 mt-12 w-96 h-64 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)]">
+                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-64 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)]">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Object Oriented Programming</h2>
                         <p class="text-lg text-slate-200">C/C++</p>
@@ -113,7 +112,7 @@
                     </div>
 
                     <div
-                        class="p-8 space-y-2 mt-12 w-96 h-56 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)]">
+                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)]">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Web Development</h2>
                         <p class="text-lg text-slate-200">HTML/CSS/JS</p>
@@ -123,7 +122,7 @@
                     </div>
 
                     <div
-                        class="p-8 space-y-2 mt-12 w-96 h-64 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)]">
+                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-64 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)]">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Video Editing</h2>
                         <p class="text-lg text-slate-200">Quality video editing using modern softwares</p>
@@ -133,7 +132,7 @@
                     </div>
 
                     <div
-                        class="p-8 space-y-2 mt-12 w-96 h-56 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)]">
+                        class="p-8 ml-5 md:ml-0 space-y-2 mt-12 w-96 h-56 text-left transtion-all duration-300 ease-in-out hover:shadow-[0_10px_20px_0_rgba(0,0,0,0.315),0_6px_6px_0_rgba(0,0,0,0.205)]">
 
                         <h2 class="text-2xl py-5 text-white font-semibold leading-6">Database language</h2>
                         <p class="text-lg text-slate-200">PL-SQL</p>
