--- a/works.html
+++ b/works.html
@@ -27,7 +27,7 @@
         <div class="loading-screen"></div>
     </div>
 
-    <div class="container h-min">
+    <div class="container h-min sm:ml-8 md:ml-0">
         <!-- navbar goes here -->
         <nav>
             <div class="max-w-7xl mx-auto px-8">
@@ -92,7 +92,7 @@
                     <a href="http://abhishekgoelandassociates.com" target="blank">
 
                         <div
-                            class="p-8 bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
+                            class="py-8 px-6 sm:h-60 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 md:h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Abhishek Goel & Associates</h2>
                             <p class="text-lg text-slate-200">Website for Chartered Accountant firm</p>
@@ -104,7 +104,7 @@
                     <a href="https://github.com/RetroMusicPlayer" target="blank">
 
                         <div
-                            class="p-8 bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
+                            class="py-8 px-6 sm:h-60 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 md:h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Retro Music Player</h2>
                             <p class="text-lg text-slate-200">Member and contributor of Retro Music Player, a material
@@ -115,7 +115,7 @@
 
                     <a href="http://mwsretail.in" target="blank">
                         <div
-                            class="p-8 bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
+                            class="py-8 px-6 sm:h-60 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 md:h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Milind Webcomm Services</h2>
                             <p class="text-lg text-slate-200">Website for Web Designing and E-Commerce operators</p>
@@ -130,7 +130,7 @@
                     <a href="https://github.com/milindgoel15/milindgoel15.github.io" target="blank">
 
                         <div
-                            class="p-8 bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
+                            class="py-8 px-6 sm:h-60 sm:px-10 md:px-8 h-[17rem] bg-blue-600 hover:bg-blue-700 border-transparent rounded-md shadow-md space-y-2 mt-5 ml-4 md:h-64 w-11/12 sm:ml-0 sm:mt-20 sm:w-[32rem] text-left relative transtion-all duration-300 ease-in-out top-0 hover:-top-1 hover:shadow-xl">
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Personal Portfolio</h2>
                             <p class="text-lg text-slate-200">Designed personal Portfolio website for myself</p>
