--- a/skills.html
+++ b/skills.html
@@ -59,7 +59,7 @@
 
                     <!-- mobile button goes here -->
                     <div class="md:hidden flex items-center">
-                        <button class="mobile-menu-button text-white">
+                        <button class="mobile-menu-button text-white focus:outline-none">
                             <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="#ffffff" viewBox="0 0 24 24"
                                 stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
