--- a/skills.html
+++ b/skills.html
@@ -8,8 +8,7 @@
     <title>Skills</title>
 
     <!-- stylesheets -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="./styles/tailwindoutput.css">
     <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css">
 
     <!-- favicons -->
@@ -149,15 +148,15 @@
         </div>
     </div>
 
-    <script src="main.js"></script>
-    <script src="snowflakes.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/snowflakes.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
-    <script src="kursor.js"></script>
+    <script src="./js/kursor.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
     <!-- load gsap animation library (minified version) -->
     <script src="https://unpkg.com/gsap@latest/dist/gsap.min.js"></script>
-    <script src="barba.js"></script>
+    <script src="./js/barba.js"></script>
 </body>
 
 </html>
