add meta properties

--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,18 @@
 <html lang="en">
 
 <head>
+    <!-- meta properties -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect with me</title>
+    <meta name="description" content="A Web Developer, based in India building astonishing web experiences.">
+    <meta name="keywords" content="Milind Goel, milindgoel15, Web Developer">
+    <meta name="title" content="Connect with me">
+    <meta property="og:title" content="Connect with me">
+    <meta property="og:description" content="A Web Developer, based in India building astonishing web experiences.">
+    <meta property="og:url" content="https://milindgoel15.github.io">
+    <meta property="og:site_name" content="milindgoel15.github.io/contact">
     
     <!-- stylesheets -->
     <link rel="stylesheet" href="./styles/tailwindoutput.css">
@@ -58,10 +66,8 @@
                     <!-- mobile button goes here -->
                     <div class="md:hidden flex items-center">
                         <button class="mobile-menu-button text-white focus:outline-none">
-                            <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="#ffffff" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M4 6h16M4 12h16M4 18h16" />
+                            <svg width="26" height="18" viewBox="0 0 26 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M13 17.5H0.25V14.6667H13V17.5ZM25.75 10.4167H0.25V7.58333H25.75V10.4167ZM25.75 3.33333H13V0.5H25.75V3.33333Z" fill="white" />
                             </svg>
                         </button>
                     </div>
