--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="en">
 
 <head>
+    <!-- meta properties -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Milind Goel</title>
-    
+    <meta name="description" content="A Web Developer, based in India building astonishing web experiences.">
+    <meta name="keywords" content="Milind Goel, milindgoel15, Web Developer">
+    <meta name="title" content="Milind Goel">
+    <meta property="og:title" content="Milind Goel">
+    <meta property="og:description" content="A Web Developer, based in India building astonishing web experiences.">
+    <meta property="og:url" content="https://milindgoel15.github.io">
+    <meta property="og:site_name" content="milindgoel15.github.io">
+
     <!-- stylesheets -->
     <link rel="stylesheet" href="./styles/tailwindoutput.css">
     <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css">
@@ -53,16 +61,18 @@
                         <a href="contact"
                             class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Contact</a>
                         <a href="CV.pdf"
-                            class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300" target="_blank">Resume</a>
+                            class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300"
+                            target="_blank">Resume</a>
                     </div>
 
                     <!-- mobile button goes here -->
                     <div class="md:hidden flex items-center">
                         <button class="mobile-menu-button text-white focus:outline-none">
-                            <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="#ffffff" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M4 6h16M4 12h16M4 18h16" />
+                            <svg width="26" height="18" viewBox="0 0 26 18" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M13 17.5H0.25V14.6667H13V17.5ZM25.75 10.4167H0.25V7.58333H25.75V10.4167ZM25.75 3.33333H13V0.5H25.75V3.33333Z"
+                                    fill="white" />
                             </svg>
                         </button>
                     </div>
@@ -84,10 +94,13 @@
         <!-- content goes here -->
         <div class="py-32 text-center animate-this" data-barba="container" data-barba-namespace="home">
             <h2 class="font-extrabold text-6xl py-5 lg:text-8xl text-white md:text-6xl">Hi! I'm Milind Goel</h2>
-            <p class="text-xl text-white text-lg py-8 px-3 md:text-2xl">a Web Developer, UI/UX Designer based in India</p>
+            <p class="text-xl text-white text-lg py-8 px-3 md:text-2xl">a Web Developer, UI/UX Designer based in India
+            </p>
 
             <a href="contact">
-                <button class="py-6 my-10 px-7 text-xl md:text-lg md:py-5 md:px-7 md:my-8 xl:my-14 xl:px-10 xl:py-7 text-xl rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700">CONNECT WITH ME</button>
+                <button
+                    class="py-6 my-10 px-7 text-xl md:text-lg md:py-5 md:px-7 md:my-8 xl:my-14 xl:px-10 xl:py-7 text-xl rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700">CONNECT
+                    WITH ME</button>
             </a>
 
             <p class="text-slate-300 footer mt-20">Made with <span class="text-red-600">❤</span> by <span
