--- a/works.html
+++ b/works.html
@@ -101,7 +101,7 @@
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Abhishek Goel & Associates</h2>
                             <p class="text-lg text-slate-200">Website for Chartered Accountant firm</p>
-                            <p class="text-lg text-slate-200">Written with HTML5, SCSS, Tailwind CSS and JS</p>
+                            <p class="text-lg text-slate-200">Written with HTML5, SCSS and JS</p>
 
                         </div>
                     </a>
@@ -139,7 +139,7 @@
 
                             <h2 class="text-2xl py-5 text-white font-semibold leading-6">Personal Portfolio</h2>
                             <p class="text-lg text-slate-200">Designed personal Portfolio website for myself</p>
-                            <p class="text-lg text-slate-200">Written with HTML5, SCSS, Tailwind CSS and JS</p>
+                            <p class="text-lg text-slate-200">Written with HTML5, Tailwind with SCSS and JS</p>
 
                         </div>
 
