--- a/works.html
+++ b/works.html
@@ -36,55 +36,49 @@
 
     <div class="container h-min sm:ml-8 md:ml-0">
         <!-- navbar goes here -->
-        <nav>
-            <div class="max-w-7xl mx-auto px-8">
-                <div class="flex justify-between h-24">
+        <nav class=" max-w-7xl mx-auto px-8 md:flex md:items-center md:justify-between">
+            <div class="flex justify-between items-center h-24">
+                <a href="https://milindgoel15.github.io">
+                    <svg height="40px" width="40px" class="logoHover" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 37.3 33.03">
+                        <g id="Layer_2" data-name="Layer 2">
+                            <g id="Layer_1-2" data-name="Layer 1">
+                                <path class="cls-1"
+                                    d="M25.72,25.67l-2.46,2.24-4.59-4.54q-9-8.92-18-17.88A2.37,2.37,0,0,1,.09,4.13C0,2.94.06,1.75.06.26ZM21,30.33.07,9.62c0,.61,0,1.21,0,1.82-.32,2.05.51,3.46,2,4.88,5.59,5.35,11,10.86,16.64,16.42Zm2.83-12.06q6.54-6.6,13.05-13.21c.15-.15.38-.32.39-.49,0-1.53,0-3,0-4.57L21.09,16.28l2.28,2.36.44-.37Zm13.2-4a.78.78,0,0,0,.27-.44c0-1.5,0-3,0-4.36L25.85,21l2.22,2.4c3.05-3.11,6-6.11,8.94-9.12ZM28.36,32.43,37,23.57a.89.89,0,0,0,.26-.45c0-1.5,0-3,0-4.61a2.36,2.36,0,0,0-.42.28Q32.64,23,28.44,27.32a1.27,1.27,0,0,0-.38.72c0,1.41,0,2.82,0,4.23ZM.1,23.07a1.91,1.91,0,0,0,.51,1.08c2.62,2.63,5.25,5.26,7.9,7.86a6.76,6.76,0,0,0,.74.55c0-1.34.06-2.48,0-3.61a2.59,2.59,0,0,0-.6-1.47c-1.28-1.38-2.64-2.66-4-4L.07,19c0,1.6,0,2.84,0,4.08ZM32.38,33h4.87V28.14ZM.15,28.7V33H4.08Z" />
+                            </g>
+                        </g>
+                    </svg>
+                </a>
 
-                    <div class="md:flex items-center space-x-4">
-                        <!-- logo -->
-                        <div>
-                            <a href="https://milindgoel15.github.io" class="flex items-center py-8 lg:py-5 px-2">
-                                <!--             any logo -->
-                                <span
-                                    class="font-bold text-white text-2xl hover:text-blue-600 transition duration-300">Milind
-                                    Goel</span>
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- nav -->
-                    <div class="hidden md:flex items-center space-x-4">
-                        <a href="works"
-                            class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Works</a>
-                        <a href="skills"
-                            class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Skills</a>
-                        <a href="contact"
-                            class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Contact</a>
-                        <a href="CV.pdf"
-                            class="py-2 px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300" target="_blank">Resume</a>
-                    </div>
-
-                    <!-- mobile button goes here -->
-                    <div class="md:hidden flex items-center">
-                        <button class="mobile-menu-button text-white focus:outline-none">
-                            <svg width="26" height="18" viewBox="0 0 26 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M13 17.5H0.25V14.6667H13V17.5ZM25.75 10.4167H0.25V7.58333H25.75V10.4167ZM25.75 3.33333H13V0.5H25.75V3.33333Z" fill="white" />
-                            </svg>
-                        </button>
-                    </div>
-
-                </div>
+                <button class="md:hidden text-white focus:outline-none" onclick="Menu(this)">
+                    <svg width="26" height="18" viewBox="0 0 26 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M13 17.5H0.25V14.6667H13V17.5ZM25.75 10.4167H0.25V7.58333H25.75V10.4167ZM25.75 3.33333H13V0.5H25.75V3.33333Z"
+                            fill="white" />
+                    </svg>
+                </button>
             </div>
 
-            <!-- mobile menu -->
-            <div class="mobile-menu hidden md:hidden">
+            <ul
+                class="md:flex md:items-center z-[1] md:z-auto md:static absolute w-full left-0 md:w-auto bg-[#14161a] md:py-0 space-x-4 md:pl-0 pl-3 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-350">
 
-                <a href="https://milindgoel15.github.io" class="block py-2 px-10 text-lg text-white">Home</a>
-                <a href="works" class="block py-2 px-10 text-lg text-white">Works</a>
-                <a href="skills" class="block py-2 px-10 text-lg text-white">Skills</a>
-                <a href="contact" class="block py-2 px-10 text-lg text-white">Contact</a>
-                <a href="CV.pdf" class="block py-2 px-10 text-lg text-white" target="_blank">Resume</a>
-            </div>
+                <li class="mx-4 my-6 md:my-0 md:mx-0">
+                    <a href="works"
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Works</a>
+                </li>
+                <li class="mx-4 my-6 md:my-0">
+                    <a href="works"
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Skills</a>
+                </li>
+                <li class="mx-4 my-6 md:my-0">
+                    <a href="works"
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Contact</a>
+                </li>
+                <li class="mx-4 my-6 md:my-0">
+                    <a href="works"
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Resume</a>
+                </li>
+            </ul>
         </nav>
 
         <!-- content goes here -->
@@ -161,7 +155,16 @@
         </div>
     </div>
 
-    <script src="./js/main.js"></script>
+    <script>
+        function Menu(e) {
+            let list = document.querySelector('ul');
+            e.name === 'menu' ? (e.name = "close",
+                list.classList.add('top-[95px]'),
+                list.classList.add('opacity-100')) : (e.name = "menu",
+                    list.classList.remove('top-[95px]'),
+                    list.classList.remove('opacity-100'))
+        }
+    </script>
     <script src="./js/snowflakes.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
     <script src="./js/kursor.js"></script>
