--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- stylesheets -->
     <link rel="stylesheet" href="./styles/tailwindoutput.css">
-    <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css"> -->
 
     <!-- favicons -->
     <link rel="icon" type="image/png" sizes="512x512" href="favicons/android-chrome-512x512.png">
@@ -64,19 +64,19 @@
 
                 <li class="mx-4 my-6 md:my-0 md:mx-0">
                     <a href="works"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Works</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Works</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="works"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Skills</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Skills</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="works"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Contact</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Contact</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
                     <a href="works"
-                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300">Resume</a>
+                        class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -89,7 +89,7 @@
 
             <a href="contact">
                 <button
-                    class="py-6 my-10 px-7 text-xl md:text-lg md:py-5 md:px-7 md:my-8 xl:my-14 xl:px-10 xl:py-7 rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700">CONNECT
+                    class="py-6 my-10 px-7 text-xl md:text-lg md:py-5 md:px-7 md:my-8 xl:my-14 xl:px-10 xl:py-7 rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700 cursor-none cursor-scale small">CONNECT
                     WITH ME</button>
             </a>
 
@@ -98,6 +98,9 @@
         </div>
 
     </div>
+
+    <div class="cursor-dot-outline"></div>
+    <div class="cursor-dot"></div>
 
     <script>
         function Menu(e) {
@@ -110,12 +113,9 @@
         }
     </script>
     <script src="./js/snowflakes.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
     <script src="./js/kursor.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
-    <!-- load gsap animation library (minified version) -->
-    <script src="https://unpkg.com/gsap@latest/dist/gsap.min.js"></script>
     <script src="./js/barba.js"></script>
 </body>
 
