--- a/contact.html
+++ b/contact.html
@@ -246,6 +246,9 @@
         </div>
     </div>
 
+    <div class="cursor-dot-outline"></div>
+    <div class="cursor-dot"></div>
+
     <script>
         function Menu(e) {
             let list = document.querySelector('ul');
@@ -257,12 +260,9 @@
         }
     </script>
     <script src="./js/snowflakes.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
     <script src="./js/kursor.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
-    <!-- load gsap animation library (minified version) -->
-    <script src="https://unpkg.com/gsap@latest/dist/gsap.min.js"></script>
     <script src="./js/barba.js"></script>
 </body>
 
