--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
                         class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Works</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
-                    <a href="works"
+                    <a href="skills"
                         class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Skills</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
-                    <a href="works"
+                    <a href="contact"
                         class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Contact</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
-                    <a href="works"
+                    <a href="CV.pdf"
                         class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Resume</a>
                 </li>
             </ul>
