--- a/works.html
+++ b/works.html
@@ -172,6 +172,7 @@
     <script src="./js/kursor.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="./js/barba.js"></script>
 </body>
 
