try fix cursor on page change

--- a/works.html
+++ b/works.html
@@ -81,7 +81,7 @@
         </nav>
 
         <!-- content goes here -->
-        <div class="py-32 text-center animate-this" data-barba="container" data-barba-namespace="works">
+        <div class="py-32 text-center animate-this cursor-none mainContent" data-barba="container" data-barba-namespace="works">
             <h2 class="font-extrabold text-2xl py-5 text-white md:text-4xl">Recents Works & Contributions</h2>
 
             <div class="flex justify-center min-h-screen">
