--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
             </ul>
         </nav>
 
-        <div class="py-32 text-center animate-this" data-barba="container" data-barba-namespace="contact">
+        <div class="py-32 text-center animate-this cursor-none mainContent" data-barba="container" data-barba-namespace="contact">
             <h2 class="font-extrabold text-4xl py-8 text-white">Connect with me</h2>
 
             <div class="flex justify-center">
