--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en">
 
 <head>
     <!-- meta properties -->
@@ -81,14 +81,14 @@
         </nav>
 
         <!-- content goes here -->
-        <div class="py-32 text-center animate-this" data-barba="container" data-barba-namespace="home">
+        <div class="py-32 text-center animate-this cursor-none mainContent" data-barba="container" data-barba-namespace="home">
             <h2 class="font-extrabold text-6xl py-5 lg:text-8xl text-white md:text-6xl">Hi! I'm Milind Goel</h2>
             <p class="text-xl text-white py-8 px-3 md:text-2xl">a Web Developer, UI/UX Designer based in India
             </p>
 
             <a href="contact">
                 <button
-                    class="py-6 my-10 px-7 text-xl md:text-lg md:py-5 md:px-7 md:my-8 xl:my-14 xl:px-10 xl:py-7 rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700 cursor-none cursor-scale small">CONNECT
+                    class="py-6 my-10 px-7 text-xl md:text-lg md:py-5 md:px-7 md:my-8 xl:my-14 xl:px-10 xl:py-7 rounded-full bg-white button transition duration-200 ease-in-out text-blue-600 hover:text-white hover:bg-blue-700">CONNECT
                     WITH ME</button>
             </a>
 
