--- a/skills.html
+++ b/skills.html
@@ -63,15 +63,15 @@
                 class="md:flex md:items-center z-[1] md:z-auto md:static absolute w-full left-0 md:w-auto bg-[#14161a] md:py-0 space-x-4 md:pl-0 pl-3 md:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-350">
 
                 <li class="mx-4 my-6 md:my-0 md:mx-0">
-                    <a href="works"
+                    <a href="works.html"
                         class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Works</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
-                    <a href="skills"
+                    <a href="skills.html"
                         class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Skills</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
-                    <a href="contact"
+                    <a href="contact.html"
                         class="py-2 md:px-3 text-xl text-white hover:bg-blue-600 hover:text-white rounded transition duration-300 cursor-scale small">Contact</a>
                 </li>
                 <li class="mx-4 my-6 md:my-0">
@@ -82,7 +82,7 @@
         </nav>
 
         <!-- content goes here -->
-        <div class="py-32 text-center" data-barba="container" data-barba-namespace="skills">
+        <div class="py-32 text-center cursor-none mainContent" data-barba="container" data-barba-namespace="skills">
             <h2 class="font-extrabold text-4xl py-1 text-white">Skills</h2>
 
             <div class="flex justify-center min-h-screen">
